# enum-group-macros

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
tests/: define_enum_group.rs  match_enum_group.rs
