[package]
name = "enum-group-macros-impl"
version = "0.1.0"
edition = "2021"
authors = ["Goldot Team"]
license = "MIT"
description = "Procedural macros for enum grouping - companion crate for enum-group-macros"
repository = "https://github.com/xuchaoqian/enum-group-macros.git"
keywords = ["enum", "group", "macro", "proc-macro"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
